--- a/image/记录/前端笔试学习题目.md
+++ b/image/记录/前端笔试学习题目.md
@@ -1064,7 +1064,7 @@ console.log(result);
 
 ---
 
-## 粉刷墙壁
+### 粉刷墙壁
 
 最近小明搬到了新家，他正在粉刷墙壁，但是不幸的是他粉刷的墙壁并不理想。他的墙壁是一个长度为 ![img](https://www.nowcoder.com/equation?tex=%5Cmathit%20n)的格子，每个格子用0表示红色，用1表示蓝色。现在墙壁是一个非常混乱的颜色。他想将墙壁涂成左边全是蓝色右边全是红色，可以将墙壁刷成全是红色或者蓝色。请问他至少需要粉刷多少个格子墙壁刷成他想要的样子？
 
@@ -1098,9 +1098,13 @@ console.log(solution(strs, n));
 
 
 
+---
+
+## 美团
+
 ----
 
-## 淘汰分数
+### 淘汰分数
 
 某比赛已经进入了淘汰赛阶段,已知共有n名选手参与了此阶段比赛，他们的得分分别是a_1,a_2….a_n,小美作为比赛的裁判希望设定一个分数线m，使得所有分数大于m的选手晋级，其他人淘汰。
 
@@ -1174,7 +1178,7 @@ console.log(result);
 
 ----
 
-## 正则序列
+### 正则序列
 
 我们称一个长度为n的序列为正则序列，当且仅当该序列是一个由1~n组成的排列，即该序列由n个正整数组成，**取值在[1,n]范围**，且不存在重复的数，同时正则序列不要求排序
 
@@ -1236,7 +1240,7 @@ console.log(result);
 
 ----
 
-## 公司食堂
+### 公司食堂
 
 小美和小团所在公司的食堂有N张餐桌，从左到右摆成一排，每张餐桌有2张餐椅供至多2人用餐，公司职员排队进入食堂用餐。小美发现职员用餐的一个规律并告诉小团：当男职员进入食堂时，他会优先选择已经坐有1人的餐桌用餐，只有当每张餐桌要么空着要么坐满2人时，他才会考虑空着的餐桌；
 
@@ -1385,4 +1389,374 @@ solution(nums, persons, N, M);
 
 
 ----
+
+### 糕点
+
+小团的蛋糕铺长期霸占着美团APP中“蛋糕奶茶”栏目的首位，因此总会吸引各路食客前来探店。
+
+小团一天最多可以烤n个蛋糕，每个蛋糕有一个正整数的重量。
+
+早上，糕点铺已经做好了m个蛋糕。
+
+现在，有一个顾客要来买两个蛋糕，他希望买这一天糕点铺烤好的最重的和最轻的蛋糕，并且希望这两个蛋糕的重量恰好为a和b。剩余的n-m个蛋糕可以现烤，请问小团能否满足他的要求？
+
+数据范围：![img](https://www.nowcoder.com/equation?tex=1%20%5Cle%20m%20%5Cle%20n%20%5Cle%201000%5C)，![img](https://www.nowcoder.com/equation?tex=1%5Cle%20a%2Cb%20%5Cle%201000%5C)
+
+进阶：时间复杂度![img](https://www.nowcoder.com/equation?tex=O(m)%5C),空间复杂度![img](https://www.nowcoder.com/equation?tex=O(m)%5C)
+
+
+
+**输入描述:**
+
+```
+输入包含多组数据，每组数据两行。每组数据的第一行包含4个整数，n,m,a,b，空格隔开。这里不保证a和b的大小关系。接下来一行m个数，空格隔开，代表烤好的蛋糕重量
+```
+
+
+
+**输出描述:**
+
+```
+对于每一组数据，如果可以办到顾客的要求，输出YES，否则输出NO
+```
+
+
+
+**输入例子1:**
+
+```
+4 2 2 4
+3 3
+4 2 2 4
+1 1
+4 2 2 4
+5 5
+4 2 4 2
+2 4
+2 2 2 4
+3 3
+3 2 2 4
+3 3
+3 2 2 4
+3 3
+```
+
+
+
+**输出例子1:**
+
+```
+YES
+NO
+NO
+YES
+NO
+NO
+NO
+```
+
+
+
+```js
+function solution(conditions, cakes) {
+    let [n, m, a, b] = conditions;
+    const YES = "YES", NO = "NO";
+    let minWeight = cakes[0], maxWeight = cakes[0];
+    for (let i = 0; i < m; i++) {
+        minWeight = Math.max(minWeight, cakes[i]);
+        maxWeight = Math.max(maxWeight, cakes[i]);
+    }
+    if (a > b) {
+        // 调整是a不大于b
+        [a, b] = [b, a];
+    }
+    if (a === minWeight && b === maxWeight) {
+        return YES;
+    }
+
+    if (n - m > 1) {  // 如果剩余没有烤的蛋糕至少还有两个
+        if (a > minWeight || b < maxWeight) {
+            // 确保最轻,最重
+            return NO;
+        }
+        return YES;
+    } else if (n - m === 1) {
+        // 还是一个没烤，则必需先有各个满足
+        if ((a === minWeight && b > maxWeight) || (b === maxWeight && a < minWeight)) {
+            return YES;
+        } else {
+            return NO;
+        }
+    }
+    return NO;
+}
+
+while(line = readline()) {
+    let line1 = line.trim().split(" ").map(Number);
+    let cakes = readline().trim().split(" ").map(Number);
+    
+    let result = solution(line1, cakes);
+    console.log(result);
+}
+
+// let line1 = [4, 2, 2, 4];
+// let cakes = [3, 3];
+// let result = solution(line1, cakes);
+// console.log(result);
+
+```
+
+
+
+----
+
+### 晋级人数
+
+小团是某综艺节目的策划，他为某个游戏环节设计了一种晋级规则，已知在这个游戏环节中每个人最后都会得到一个分数score_i，显而易见的是，游戏很有可能出现同分的情况，小团计划该环节晋级人数为x人，则将所有人的分数从高到低排序，所有分数大于等于第x个人的分数且得分不为0的人都可以晋级。
+
+请你求出本环节的实际晋级人数。显然这个数字可能是0，如果所有人的得分都是0，则没有人满足晋级条件。
+
+
+
+**输入描述:**
+
+```
+输入第一行包含两个正整数n和x，分别表示参加本环节的人数，和小团指定的x。输入第二行包含n个整数，每个整数表示一位选手的得分。
+```
+
+
+
+**输出描述:**
+
+```
+输出仅包含一个整数，表示实际晋级人数。
+```
+
+
+
+**输入例子1:**
+
+```
+5 4 
+0 0 2 3 4
+```
+
+
+
+**输出例子1:**
+
+```
+3
+```
+
+
+
+```js
+function solution(conditions, scores) {
+    let [n, x] = conditions;
+    scores.sort((a, b) => b - a);
+    if (scores[x - 1] !== 0) {
+        while(scores[x] === scores[x - 1] && x < n) {
+            x++;
+        }
+    } else {
+        while(scores[x - 1] === 0 && x > 0) {
+            x--;
+        }
+    }
+    
+    return x;
+}
+
+
+let line1 = readline().trim().split(" ").map(Number);
+let scores = readline().trim().split(" ").map(Number);
+
+let result = solution(line1, scores);
+console.log(result);
+
+
+let line1 = [5, 4];
+let scores = [0, 0, 2, 3, 4];
+
+let result = solution(line1, scores);
+console.log(result);
+```
+
+
+
+----
+
+### 回转寿司
+
+小美请小团吃回转寿司。转盘上有N盘寿司围成一圈，第1盘与第2盘相邻，第2盘与第3盘相邻，…，第N-1盘与第N盘相邻，第N盘与第1盘相邻。小团认为第i盘寿司的美味值为A[i]（可能是负值，如果小团讨厌这盘寿司）。现在，小团要在转盘上选出连续的若干盘寿司，使得这些寿司的美味值之和最大（允许不选任何寿司，此时美味值总和为0）。
+
+
+
+**输入描述:**
+
+```
+第一行输入一个整数T（1<=T<=10），表示数据组数。每组数据占两行，第一行输入一个整数N（1<=N<=10^5）；第二行输入N个由空格隔开的整数，表示A[1]到A[N]（-10^4<=A[i]<=10^4）。
+```
+
+
+
+**输出描述:**
+
+```
+每组数据输出占一行，输出一个整数，表示连续若干盘寿司的美味值之和的最大值。
+```
+
+
+
+**输入例子1:**
+
+```
+1
+4
+3 -2 4 -1
+```
+
+
+
+**输出例子1:**
+
+```
+6
+```
+
+
+
+**例子说明1:**
+
+```
+美味值之和最大连续若干盘寿司为第3盘、第4盘和第1盘。 
+```
+
+链接：https://www.nowcoder.com/questionTerminal/5a2a527f68b6434ba0b4faadcdc97812
+来源：牛客网
+
+
+
+(1) 不考虑环形得到的最大值：题中允许寿司首尾相连的环形数组情况，因此常规求得的连续子数组的最大和就是我们排除这种情况之外的所有情况中的最大和。 
+
+  (2) 只考虑环形得到的最大值：而对于首尾相连的情况，我们可以这样考虑，如果常规求得的连续子数组的和达到了最小，那么总和减去这个最小值就等于首尾相连情况的最大值了。 
+
+  因此最大的美味值就是(1)和(2)两种情况中大的那个。
+
+```js
+function solution(nums, n) {
+    if (n < 1) {
+        return 0;
+    }
+    let maxSum = nums[0], prevMax = nums[0];
+    let minSum = nums[0], prevMin = nums[0];
+    let sum = nums[0];
+    for (let i = 1; i < n; i++) {
+        sum += nums[i];
+
+        prevMax = Math.max(prevMax + nums[i], nums[i]);
+        maxSum = Math.max(prevMax, maxSum);
+
+        prevMin = Math.min(prevMin + nums[i], nums[i]);
+        minSum = Math.min(prevMin, minSum);
+    }
+
+    let ans = Math.max(maxSum, sum - minSum);
+    return ans > 0 ? ans : 0;
+    
+}
+
+let T = parseInt(readline().trim());
+while (T > 0) {
+    let N = parseInt(readline().trim());
+    let nums = readline().trim().split(" ").map(Number);
+
+    let result = solution(nums, N);
+    console.log(result);
+
+    T--;
+}
+
+
+
+let N = 4;
+let nums = [3, -2, 4, -1];
+
+let result = solution(nums, N);
+console.log(result);
+```
+
+
+
+---
+
+### 神秘的苹果树
+
+小团找到一颗有n个节点的苹果树，以1号节点为根，且每个节点都有一个苹果，苹果都有一个颜色，但是这棵树被施加了咒术，这使得小团只能从某一个节点的子树中选取某一种颜色的拿。小团想要拿到数量最多的那种颜色的所有苹果，请帮帮她。每次她会指定一个节点t，如果小团只能从节点t的子树中选取某一种颜色的苹果，选取什么颜色能拿到最多的苹果？如果有多种颜色都可以拿同样多的苹果，输出颜色编号最小的那个对应的编号。
+
+
+
+节点x的子树定义为所有将x当作祖先的节点，x也视为x的子树的一部分。
+
+
+
+
+
+**输入描述:**
+
+```
+第一行一个正整数n表示这颗树上节点的个数。接下来n-1行，每行两个正整数x­­i,yi,表示树上第i条边连接的两个节点。接下来一行n个正整数c­i，分别表示从1~n号节点上的苹果的颜色。接下来一行一个正整数q,表示接下来有q次独立的询问。接下来q行，每行一个正整数t表示询问：如果小团只能从节点t的子树中选取某一种颜色的苹果，选取什么颜色能拿到最多的苹果？如果有多种颜色都可以拿同样多的苹果，输出颜色编号最小的那个对应的编号。      对于100%的数据n≤5000, 1≤xi,yi,t≤n, ci≤1000000000,q≤1000
+```
+
+
+
+**输出描述:**
+
+```
+输出q行，每行一个整数，表示答案。   
+```
+
+
+
+**输入例子1:**
+
+```
+7
+1 2
+1 3
+2 4
+2 5
+3 6
+3 7
+1 1 2 1 2 2 3
+7
+1
+2
+3
+4
+5
+6
+7
+```
+
+
+
+**输出例子1:**
+
+```
+1
+1
+2
+1
+2
+2
+3
+```
+
+
+
+```
+
+```
 
