--- a/面试学习题目/前端面试_12_算法与手写题部分.md
+++ b/面试学习题目/前端面试_12_算法与手写题部分.md
@@ -991,13 +991,15 @@ let swap = (arr, i , j) => {
 
 ----
 
-## 2.11 验证有效的括号
+## 验证有效的括号
 
 给定一个只包括 '('，')'，'{'，'}'，'['，']'的字符串，判断字符串是否有效。
 
 有效字符串需满足：
 
 左括号必须用相同类型的右括号闭合。 左括号必须以正确的顺序闭合。 注意空字符串可被认为是有效字符串。
+
+### （1）用repace方法
 
 第一种：用repace方法，闭合才有效，也就是最里边的也要闭合，那就把最里边的括号取代为空
 
@@ -1007,21 +1009,28 @@ let swap = (arr, i , j) => {
  * @return {boolean}
  */
 var isValid = function(s) {
-	while(s.length){
-		let temp=s;
-		s=s.replace("()", "");
-		s=s.replace("[]", "");
-		s=s.replace("{}", "");
-		if (s===temp) {
-			return false;
-		}
-	}
-	return true;
+    while(s.length){
+        let len = s.length;
+        // s = s.replace(/\(\)/g, "");
+        // s = s.replace(/\[\]/g, "");
+        // s = s.replace(/\{\}/g, "");
+        s = s.replace(/\(\)|\[\]|\{\}/g, "");
+        
+        if (len === s.length) {
+            // 没有匹配到则无效
+            // console.log(s)
+            return false;
+        }
+    }
+    console.log(s)
+    return true;
 };
 
-let s = "()[]{}";
+let s = "(()[[]]{[]()[]})";
 console.log(isValid(s));
 ```
+
+### （2）栈思想 
 
 第二种：栈思想 括号都是要闭合的，也就是说遇到第一个右括号时，必定左边就是对应的左括号，也就是说把遇到的左括号都放进栈里，然后遇到右括号时取出栈顶的元素匹配 如"{[()]}"遇到{[(放入栈内，然后遇到）与栈顶匹配，栈顶也就是最后一个进栈的元素（，然后把栈的最后一个元素删掉
 
@@ -1031,54 +1040,35 @@ console.log(isValid(s));
  * @return {boolean}
  */
 var isValid = function(s) {
-	let stack = [];
-	let leftBracketSet = new Set(['(', '[', '{']);
-	let bracketMap = new Map([[')','('],[']','['],['}','{']]);
-	console.log(bracketMap)
-	for (let i = 0; i < s.length; i++){
-		if (leftBracketSet.has(s[i])) {
-			stack.push(s[i]);
-		}else{
-			if (stack.length > 0 && stack[stack.length - 1] === bracketMap.get(s[i])) {
-				stack.pop();
-			}else{
-				return false;
-			}
-		}
-	}
-	return stack.length===0;
-};
+    let stack = [];
+    let leftBracketSet = new Set(['(', '[', '{']);
+    let bracketMap = new Map([[')','('],[']','['],['}','{']]);
 
-let s = "()[]{}";
-console.log(isValid(s));
-```
+    const n = s.length;
 
-比起第一个方法快了不少但是还是慢
-
-第三种：使用map数据结构
-
-循环s字符串，ch in map 的意思是循环map的键值，也就是遇到左括号时，放进数组，当开始遇到右括号时，用pop（）弹出栈顶的元素与与之比对，若是不相等，就ruturn false （leftArr.pop()为左括号，map[key]=value,也就是右括号），当程序走完时，left的length长度应该为0，若不为0则没闭合(当length=0 时，!leftArr.length为ture，当length>0 时，!leftArr.length为false)
-
-```js
-var isValid = function(s) {
-    let map = {
-        "{":"}",
-        "[":"]",
-        "(":")",
-    }
-    let leftArr = [];
-    for(let ch of s){
-        if(ch in map){
-            leftArr.push(ch)
-        }else{
-            if(ch!=map[leftArr.pop()]){
-                return false
+    for (let i = 0; i < n; i++){
+        if (leftBracketSet.has(s[i])) {
+            // 左括号
+            stack.push(s[i]);
+        } else {
+            // 右括号
+            if (!stack.length || stack.pop() !== bracketMap.get(s[i])) {
+                // 栈顶元素不匹配
+                console.log(stack);
+                return false;
             }
         }
     }
-     return !leftArr.length
+    // console.log(stack);
+    return stack.length === 0;
 };
+
+
+let s = "(()[[]]{[]]()})";
+console.log(isValid(s));
 ```
+
+
 
 ---
 
@@ -1330,7 +1320,7 @@ var rob = function(nums) {
 
 
 
-# 数组及对象扁平化
+## 数组及对象扁平化
 
 数组
 
@@ -1446,7 +1436,7 @@ let flatten = (obj) => {
 
 ---
 
-# 手写Promise
+## 手写Promise
 
 ```html
 <!DOCTYPE html>
@@ -1707,7 +1697,7 @@ p.then((value) => {
 
 ---
 
-# js手写发布订阅模式
+## js手写发布订阅模式
 
 发布-订阅模式其实是一种对象间**一对多的依赖关系**，当一个对象的状态发送改变时，所有依赖于它的对象都将得到状态改变的通知。
 订阅者（Subscriber）把自己想订阅的事件注册（Subscribe）到调度中心（Event Channel），当发布者（Publisher）发布该事件（Publish Event）到调度中心，也就是该事件触发时，由调度中心统一调度（Fire Event）订阅者注册到调度中心的处理代码。
@@ -1805,27 +1795,34 @@ class EventEmitter {
 let eventBus = new EventEmitter();
 
 let fn1 = function(name, age) {
-  console.log(`${name} ${age}`);
+  console.log(`hello1, ${name} ${age}`);
 }
 
 let fn2 = function(name, age) {
-  console.log(`hello, ${name} ${age}`);
+  console.log(`hello2, ${name} ${age}`);
 }
 
 eventBus.on('aaa', fn1);
 eventBus.on('aaa', fn2);
+
 eventBus.emit('aaa', 'kop', 66);
+// hello1, kop 66
+// hello2, kop 66
+
 eventBus.once("bbb", fn2);
+
 eventBus.emit("bbb", "John", 26);
+// hello2, John 26
+
 eventBus.emit("bbb", "Bob", 21);
+
 eventBus.off("aaa",fn1);
+
 eventBus.emit("aaa", "Alison", 29);
+// hello2, Alison 29
 
-// kop 66
-// hello, kop 66
-// hello, John 26
-// hello, Alison 29
-
+console.log(eventBus._events);   
+// { aaa: [ [Function: fn2] ], bbb: [] }
 ```
 
 简单
@@ -1905,7 +1902,7 @@ have a rest
 */
 ```
 
-#### 13.2 实现 Eventemitter 类，有on、emit、off 方法
+## 13.2 实现 Eventemitter 类，有on、emit、off 方法
 
 **参考答案：**
 
@@ -1949,7 +1946,7 @@ class EventEmitter{
 
 ------
 
-#### 13.3 查找给定的两个节点的第一个公共父节点
+## 13.3 查找给定的两个节点的第一个公共父节点
 
 **参考答案**：
 
