--- a/面试学习题目/前端面试_18_前端工具部分.md
+++ b/面试学习题目/前端面试_18_前端工具部分.md
@@ -429,6 +429,53 @@ yarn 是一个由`Facebook`、`Google`、`Exponent`和`Tilde`构建的新的Java
 
 如果依赖包中存在二进制包需要进行编译，那么会在这一步进行。
 
+
+
+----
+
+# git部分
+
+----
+
+##  什么是 git stash？
+
+通常情况下，当你一直在处理项目的某一部分时，如果你想要在某个时候切换分支去处理其他事情，事情会处于混乱的状态。问题是，你不想把完成了一半的工作的提交，以便你以后就可以回到当前的工作。解决这个问题的答案是 git stash。
+
+再解释什么是git stash。
+
+stash 会将你的工作目录，即修改后的跟踪文件和暂存的更改保存在一堆未完成的更改中，你可以随时重新应用这些更改。
+
+
+
+----
+
+##  git pull 和 git fetch 有什么区别？
+
+git pull 命令从中央存储库中提取特定分支的新更改或提交，并更新本地存储库中的目标分支。
+
+git fetch 也用于相同的目的，但它的工作方式略有不同。当你执行 git fetch 时，它会从所需的分支中提取所有新提交，并将其存储在本地存储库中的新分支中。如果要在目标分支中反映这些更改，必须在 git fetch 之后执行git merge。只有在对目标分支和获取的分支进行合并后才会更新目标分支。为了方便起见，请记住以下等式：
+
+> git pull = git fetch + git merge
+
+
+
+----
+
+## Git，GitHub与GitLab分别是什么？有什么区别？
+
+- Git是一款免费、开源的分布式版本控制系统
+- GitHub是一个面向开源及私有软件项目的托管平台，因为只支持git作为唯一的版本库格式进行托管，故名GitHub。
+- GitLab 是一个用于仓库管理系统的开源项目，使用Git作为代码管理工具，并在此基础上搭建起来的web服务。安装方法是参考GitLab在GitHub上的Wiki页面。
+
+### 区别
+
+- Git是一种版本控制系统，是一种工具，用于代码的存储和版本控制。
+- GitHub是一个基于Git实现的在线代码仓库，是目前全球最大的代码托管平台，可以帮助程序员之间互相交流和学习。
+- GitLab是一个基于Git实现的在线代码仓库软件，你可以用GitLab自己搭建一个类似于GitHub一样的仓库，但是GitLab有完善的管理界面和权限控制，一般用于在企业、学校等内部网络搭建Git私服。
+- GitHub和GiLlab两个都是基于Web的Git远程仓库，它们都提供了分享开源项目的平台，为开发团队提供了存储、分享、发布和合作开发项目的中心化云存储的场所。从代码的私有性上来看，GitLab 是一个更好的选择。但是对于开源项目而言，GitHub 依然是代码托管的首选。
+
+
+
 ----
 
 ##  说说你对Git的理解？
@@ -1166,6 +1213,75 @@ git config [--global] user.email "[email address]"
 版本控制能提供项目的设计者，将设计恢复到之前任一状态的选择权
 
 简言之，你的修改只要提到到版本控制系统，基本都可以找回，版本控制系统就像一台时光机器，可以让你回到任何一个时间点
+
+
+
+----
+
+## git冲突如何解决
+
+#### 什么是代码提交冲突？
+
+在多人团队使用代码托管服务时，不可避免的会出现两个人同时修改了一个文件的情况，这时在推送（push）代码到代码托管仓库时就会出现代码提交冲突并推送失败
+
+说明：
+
+- 不同版本的Git、不同编译工具的Git插件所返回提示的内容不完全一致，但所表达的意思基本一致。
+- 只要在返回提示的内容中解读出，推送失败、另一个仓库成员，两个信息，一般即为产生了提交冲突。
+- Git在文件合并时是比较智能的，对于同一个文件不同位置的修改内容会自动合并，只有在同一个文件同一个位置被同时修改时（本地仓与远程仓的当前版本有差异），才会产生冲突。
+- 在分支合并时，有时也会产生冲突，这时的判定方式与解决办法与提交远程仓库时的冲突基本一样
+
+#### 如何解决代码提交冲突？
+
+当代码提交冲突产生时，我们可以将远程代码仓库拉取（pull）到本地仓库的工作区，这时Git会将可以合并的修改内容进行合并，并将不能合并的文件内容进行提示，开发者只需要对提示的冲突内容进行修改即可再次推送到远程仓库（add → commit → push）,这时冲突就解决完毕了。
+
+```bash
+git pull
+```
+
+在做拉取（pull）操作时，Git提示您，一个文件合并时产生了冲突。
+
+当然在修改冲突文件时应该考虑清楚，必要时要与冲突方联系协商解决，避免覆盖他人代码。
+
+git pull可以理解为 git fetch 的操作 + git merge的操作，其详细说明如下：
+
+```bash
+git fetch origin master #从远程主机的master分支拉取最新内容   
+git merge FETCH_HEAD    #将拉取下来的最新内容合并到当前所在的分支中 
+```
+
+在merge的时候，会将有冲突不能合并的内容做出提示。
+
+```
+说明：
+Git很智能的将两个人的修改同时显示出来，并用“=======”分割开来
+
+“<<<<<<<HEAD” 与 “=======” 中间的是冲突位置中对应的本地仓库的修改。
+“=======” 与 “>>>>>>>” 中间的是冲突位置中对应的远程仓库的修改（也就是刚拉取下来的内容）。
+“>>>>>>>” 后面是本次的提交ID。
+“<<<<<<<HEAD”、“=======”、“>>>>>>>”、提交ID并非实际编写的代码，解决冲突时注意删除。
+```
+
+
+
+#### 如何避免冲突的产生？
+
+代码提交、合并冲突经常发生，但只要在代码开发前，做好仓库预处理工作，就能有效的避免冲突的产生。
+
+**方式一（推荐新手使用）：**
+
+如果开发者本地的仓库不常更新使用，在做本地修改时，可以重新clone一份远程仓库的内容到本地，修改后再次提交，这样简单直接的解决了版本差异问题，但缺点是如果仓库较大、更新记录较多，clone过程将耗费一定的时间。
+
+**方式二：**
+
+如果开发者每天都要对本地仓库进行修改，则建议在本地新建一条开发分支进行代码修改，在要提交远程仓库时，切换到master分支并将远程仓库的最新master分支内容拉取到本地，在本地进行分支合并，对产生的冲突进行修复，成功将内容合并到master分支后，再提交到远程仓库。
+
+#### 如何在代码托管服务的控制台上解决分支合并冲突？
+
+代码托管服务支持云端的[分支管理](https://support.huaweicloud.com/usermanual-codehub/devcloud_hlp_0832.html)，当在进行分支合并时，有时也会产生冲突
+
+- **在线解决冲突（**推荐在代码量较小或涉及冲突的代码量较小的情况下使用）
+- **本地解决冲突**（推荐在大型项目中使用）
 
 
 
