--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -20177,6 +20177,80 @@ console.log(reformat(s));
 
 
 
+----
+
+## 1422. 分割字符串的最大得分
+
+给你一个由若干 0 和 1 组成的字符串 s ，请你计算并返回将该字符串分割成两个 非空 子字符串（即 左 子字符串和 右 子字符串）所能获得的最大得分。
+
+「分割字符串的得分」为 左 子字符串中 0 的数量加上 右 子字符串中 1 的数量。
+
+**提示：**
+
+- `2 <= s.length <= 500`
+- 字符串 `s` 仅由字符 `'0'` 和 `'1'` 组成。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var maxScore = function(s) {
+    let left = 0;
+    let n = s.length;
+    let scores = new Array(n).fill(0);
+    let zero = 0;
+    for (let i = 0; i < n - 1; i++) {
+        if (s[i] === "0") {
+            zero++;
+        }
+        scores[i] = zero;
+    }
+
+    let one = 0;
+    let ans = 0;
+    for (let i = n - 1; i > 0; i--) {
+        if (s[i] === "1") {
+            one++;
+        }
+        ans = Math.max(ans, scores[i - 1] + one);
+    }
+
+    return ans;
+};
+
+let s = "00111";
+console.log(maxScore(s));
+```
+
+```js
+var maxScore = function(s) {
+    let score = 0;
+    const n = s.length;
+    if (s[0] === '0') {
+        score++;
+    }
+    for (let i = 1; i < n; i++) {
+        if (s[i] === '1') {
+            score++;
+        }
+    }
+    let ans = score;
+    for (let i = 1; i < n - 1; i++) {
+        if (s[i] == '0') {
+            score++;
+        } else {
+            score--;
+        }
+        ans = Math.max(ans, score);
+    }
+    return ans;
+};
+
+```
+
+
+
 ---
 
 ## 1447. 最简分数
