--- a/面试学习题目/前端面试_17_浏览器部分.md
+++ b/面试学习题目/前端面试_17_浏览器部分.md
@@ -51,12 +51,13 @@ cookie 和 session 的区别：
 
 ### Cookie
 
-- Cookie 就是访问者在访问网站后留下的一个信息片段。
+- Cookie 就是访问者在访问网站后留下的一个**信息片段**。
 
 - Cookie 用于个性化用户的体验。可能包含用户在访问网站时的参数或输入。用户可以自定义浏览器来接受，拒绝或删除 Cookie。
 
-- Cookie 可以在服务器级别设置和修改，使用 Set-Cookie HTTP header, 或者在 JavaScript 中用 document.cookie.
-- **cookie是服务器发给客户端的一种特殊认证信息，通常以文本的方式保存在客户端**，始终在同源的http请求中携带（即使不需要），以供服务器验证当前浏览器用户身份，常见应用场景：验证用户身份、保存上次登录信息、统计浏览次数
+- Cookie **可以在服务器级别设置和修改**，使用 Set-Cookie HTTP header, 或者在 JavaScript 中用 document.cookie.
+- **cookie是服务器发给客户端的一种特殊认证信息，通常以文本的方式保存在客户端**，始终在同源的http请求中携带（即使不需要），以供服务器验证当前浏览器用户身份
+- 常见应用场景：验证用户身份、保存上次登录信息、统计浏览次数
 
 ### sessionStorage
 
@@ -83,7 +84,7 @@ cookie 和 session 的区别：
 
 **请求是否携带**
 
-- cookie数据始终在**同源**的http请求中携带（即使不需要），即cookie在浏览器和服务器间来回传递
+- cookie数据始终在**同源**的http请求中携带（即使不需要），**即cookie在浏览器和服务器间来回传递**
 - 而sessionStorage和localStorage不会自动把数据发送给服务器，仅在本地保存。
 - **cookie数据还有路径（path）的概念，可以限制cookie只属于某个路径下**
 
@@ -332,13 +333,36 @@ cookie 和 session 的区别：
 
 ## 5. localstorage的限制
 
-**参考答案**：
-
 1. **浏览器的大小不统一**，并且在IE8以上的IE版本才支持localStorage这个属性
 2. 目前**所有的浏览器中都会把localStorage的值类型限定为string类型**，这个在对我们日常比较常见的JSON对象类型需要一些转换
 3. localStorage在浏览器的**隐私模式下面是不可读取的**
 4. localStorage**本质上是对字符串的读取**，如果存储内容多的话会消耗内存空间，会导致页面变卡
 5. localStorage**不能被爬虫抓取到**
+
+
+
+localStorage或者sessionStorage怎么设计缓存的数据结构，如果数据量很大怎么查找
+
+**localStorage的运行解析**
+
+1. localStorage的关键问题在于它是通过同步操作的方式来进行文件I/o操作。
+2. 写入localStorage的数据都会保存到磁盘上，除非主动删除数据，否则数据是永远不会过期的。
+3. 用过nodeJs的人都知道，对于文件的I/O是非常昂贵和不一致的（不可信赖）。
+4. 任何时间点任何的程序都可以访问文件。举例来说，你注意到过当一个杀毒软件运行的时候你的电脑是如何慢下来的吗？在理想状态下，你读取的文件不会有其他程序在同一时间访问该文件。在极端坏的情况下，如果你想读取一个文件，就必须等待文件上的锁被释放（其他程序操作文件时会锁定文件）。
+
+
+
+鉴于此，从localStorage读取数据的最佳策略是使用尽可能少的键值，存储尽可能多的数据。因为读取10个字符和读取2000个字符所需时间大致是相同的，所以你应该尝试把尽可能多的数据保存为一个键值对应的值。每次调用getItem()（或从localStorage读取属性）都会增加时耗，所以一定要确保每次访问读取数据最大化。对于任何一个变量或对象属性，你越快将它读取到内存，后续的所有操作也会越快。
+
+**结论**
+
+- 日常我们工作中，使用localStorage进行本地存储的时候，分批次与整体存入 存在效率问题，但是两者的相差不大，**建议整体存入，减少文件的i/o操作,转为js的对象操作**
+- localStorage存储、读取的速度，与每次存入的数据量大小，读写文件的次数有关系。
+- 理论上来说，处理js对象的开销 小于读取文件的开销，但是当数据量庞大到一个量级的时候 ，整体存入的时间就会大于分批次存入的事件（待验证）
+- safari的localStorage 相对于chrome来说  存储和读取更快，但是同时容量更小。
+- 浏览器无痕模式下，localStorage会失效，需要捕捉错误，并暴露出来
+
+
 
 
 
@@ -1656,7 +1680,7 @@ LocalStorage **缺点**：需要手动删除，否则长期存在；浏览器大
 
 WebSQL 是**在浏览器上模拟数据库**，可以使用JS来操作SQL进行数据读写，使用 SQL 来操纵客户端数据库的 API（**异步**），现阶段使用较少
 
-- IndexedDB
+- **IndexedDB**
 
 随浏览器的功能日益强大，越来越多的网站将大量数据储存在客户端，可减少从服务器获取数据，直接从本地获取数据
 
@@ -1772,3 +1796,162 @@ HSTS是HTTPS协议的永久组成部分，并在 [RFC 6797](https://tools.ietf.o
 注意，**如果你之前没有使用 HTTPS 访问过该站点，那么 HSTS 是不奏效的**。网站需要通过 HTTPS 协议告诉你的浏览器它支持 HSTS。
 
 服务器开启 HSTS 的方法是，当客户端通过HTTPS发出请求时，在服务器返回的 HTTP 响应头中包含 Strict-Transport-Security 字段。非加密传输时设置的HSTS字段无效。
+
+
+
+---
+
+## 谈谈indexDB
+
+
+
+
+
+----
+
+## postMessage 有哪些使用场景？
+
+`window.postMessage()` 方法可以安全地实现跨源通信。`window.postMessage()` 方法提供了一种受控机制来规避此限制，只要正确的使用，这种方法就很安全
+
+postMessage 是 HTML5 新方法，它可以实现跨域窗口之间通讯。到目前为止，只有 IE8+, Firefox 3, Opera 9, Chrome 3和 Safari 4 支持，而本篇文章主要讲述 postMessage 方法与 message 事件跨浏览器实现。
+
+
+postMessage 方法 JSONP 技术不一样，前者是前端擅长跨域文档数据即时通讯，后者擅长针对跨域服务端数据通讯，postMessage 应用场景能说明这个区别：
+
+## 应用场景举例
+
+1. webOS 使用 iframe 嵌入第三方应用，此时 webOS 与应用需要实时接收/发送各自的消息与响应事件。
+2. 页面弹出一个由 iframe 层，嵌入第三方提供的图片上传页面，文件上传完毕后需要获取返回图片地址插入到编辑器。
+3. iframe 跨域高度自适应。
+
+
+
+场景分析：第三方在页面中初始化SDK,这个SDK生成一个iframe，iframe中有个表单，提交表单，根据同源策略，提交表单发出的请求是向我方服务器发送的，返回的结果也只能在iframe中，如何把iframe中的消息也就是我方服务器返回的结果传给第三方在页面？这就是跨域，于是postMesage 就派上了用场。
+
+
+
+**可用于两个不同的Iframe（不同源） 之间的通讯**
+
+语法
+
+```
+otherWindow.postMessage(message, targetOrigin, [transfer]);
+```
+
+参数说明
+
+- `data`
+
+  从其他 window 中传递过来的对象。
+
+- `origin`
+
+  调用 `postMessage` 时消息发送方窗口的 [origin](https://developer.mozilla.org/en-US/docs/Origin) . 这个字符串由 协议、“://“、域名、“ : 端口号”拼接而成。例如 “`https://example.org` (隐含端口 `443`)”、“`http://example.net` (隐含端口 `80`)”、“`http://example.com:8080`”。请注意，这个origin不能保证是该窗口的当前或未来origin，因为postMessage被调用后可能被导航到不同的位置。
+
+- `source`
+
+  对发送消息的[窗口](https://developer.mozilla.org/en-US/docs/Web/API/Window)对象的引用; 您可以使用此来在具有不同origin的两个窗口之间建立双向通信。
+
+例子
+
+子框架传递信息
+
+```html
+<script>
+
+// 子框架向父框架发送信息
+
+function goParentIfromPostMessage(msg,parentUrl){
+
+    var parentUrl = window.parent.location.origin;
+
+        window.onload=function(){
+
+        window.parent.postMessage(msg,parentUrl);
+
+        }
+    }
+ }
+ 
+    goParentIfromPostMessage('msgStr',parentIfromUrl)
+
+</script>
+```
+
+父框架接收端
+
+```html
+<script>
+
+        window.addEventListener('message',function(e){
+
+            console.log(e.origin,e.data);
+
+            console.log(e.data);
+
+        })
+
+</script>
+```
+
+这样即可以实现简单的框架跨域通信，但是会有一些安全问题
+
+安全问题
+
+**如果您不希望从其他网站接收message，请不要为message事件添加任何事件侦听器。** 这是一个完全万无一失的方式来避免安全问题。
+
+如果您确实希望从其他网站接收message，请**始终使用origin和source属性验证发件人的身份**。 任何窗口（包括例如[http://evil.example.com）都可以向任何其他窗口发送消息，并且您不能保证未知发件人不会发送恶意消息。](http://evil.example.xn--com)%2C-si1ha8cz2h5hyf7h8bz0ah3ak6dswlfyleae18asi11a590rxkkla2qq9cvzfr23eri3bqa4568f7etajg5c182e536asa219g./) 但是，验证身份后，您仍然应该**始终验证接收到的消息的语法**。 否则，您信任只发送受信任邮件的网站中的安全漏洞可能会在您的网站中打开跨网站脚本漏洞。
+
+**当您使用postMessage将数据发送到其他窗口时，始终指定精确的目标origin，而不是\*。** 恶意网站可以在您不知情的情况下更改窗口的位置，因此它可以拦截使用postMessage发送的数据。
+
+示例
+
+```js
+/*
+ * A窗口的域名是<http://example.com:8080>，以下是A窗口的script标签下的代码：
+ */
+
+var popup = window.open(...popup details...);
+
+// 如果弹出框没有被阻止且加载完成
+
+// 这行语句没有发送信息出去，即使假设当前页面没有改变location（因为targetOrigin设置不对）
+popup.postMessage("The user is 'bob' and the password is 'secret'",
+                  "https://secure.example.net");
+
+// 假设当前页面没有改变location，这条语句会成功添加message到发送队列中去（targetOrigin设置对了）
+popup.postMessage("hello there!", "http://example.org");
+
+function receiveMessage(event)
+{
+  // 我们能相信信息的发送者吗?  (也许这个发送者和我们最初打开的不是同一个页面).
+  if (event.origin !== "http://example.org")
+    return;
+
+  // event.source 是我们通过window.open打开的弹出页面 popup
+  // event.data 是 popup发送给当前页面的消息 "hi there yourself!  the secret response is: rheeeeet!"
+}
+window.addEventListener("message", receiveMessage, false);
+/*
+ * 弹出页 popup 域名是<http://example.org>，以下是script标签中的代码:
+ */
+
+//当A页面postMessage被调用后，这个function被addEventListener调用
+function receiveMessage(event)
+{
+  // 我们能信任信息来源吗？
+  if (event.origin !== "http://example.com:8080")
+    return;
+
+  // event.source 就当前弹出页的来源页面
+  // event.data 是 "hello there!"
+
+  // 假设你已经验证了所受到信息的origin (任何时候你都应该这样做), 一个很方便的方式就是把event.source
+  // 作为回信的对象，并且把event.origin作为targetOrigin
+  event.source.postMessage("hi there yourself!  the secret response " +
+                           "is: rheeeeet!",
+                           event.origin);
+}
+
+window.addEventListener("message", receiveMessage, false);
+```
