--- a/面试学习题目/重难点内容/前端常用布局方案.md
+++ b/面试学习题目/重难点内容/前端常用布局方案.md
@@ -1116,7 +1116,7 @@ Grid方案的实现方式相对来说比较简单，方式也较多。
 </body>
 ```
 
-### 1. 通过float实现(一)
+### 1. 通过float + overflow实现
 
 实现步骤：
 
@@ -1132,7 +1132,7 @@ Grid方案的实现方式相对来说比较简单，方式也较多。
 
 1. 左列容器开启左浮动
 2. 右列容器开启右浮动
-3. 自适应元素设置`overflow`会创建一个BFC完成自适应
+3. **自适应元素设置`overflow`会创建一个BFC完成自适应**
 
 ```css
 		.container {
@@ -1161,7 +1161,7 @@ Grid方案的实现方式相对来说比较简单，方式也较多。
 		}
 ```
 
-### 2. 通过float实现(二)
+### 2. 通过float + calc(100% - leftWidth - rightWidth)实现
 
 实现步骤
 
@@ -1197,7 +1197,7 @@ Grid方案的实现方式相对来说比较简单，方式也较多。
 		}
 ```
 
-### 3. 通过position实现
+### 3. 通过position + calc +  margin实现
 
 实现步骤
 
@@ -1269,7 +1269,7 @@ Grid方案的实现方式相对来说比较简单，方式也较多。
 		}
 ```
 
-### 5. Grid方案
+### 5. Grid + grid-template-columns方案
 
 通过 Grid 布局实现该功能主要是通过 `template` 属性实现。
 
