--- a/面试学习题目/前端面试_4_ES6部分.md
+++ b/面试学习题目/前端面试_4_ES6部分.md
@@ -519,6 +519,66 @@ var obj = {
 
 
 
+----
+
+## ES5是怎么实现箭头函数的效果的
+
+箭头函数没有它自己的 `this` 值，箭头函数内的 `this` 值继承自外围作用域，谁定义的函数this 指向谁
+
+箭头函数要实现类似纯函数的效果，必须剔除外部状态。所以箭头函数不具备普通函数里常见的 this、arguments 等，当然也就不能用 call ()、apply ()、bind () 去改变 this 的指向
+
+对于箭头函数来说，并没有自己的 `this` ，它的 `this` 将始终指向让它生效的对象，即它的外部调用者：
+
+```js
+ ES6 function foo() { 
+     setTimeout(() => { 
+         console.log('id:', this.id); 
+     }, 100); 
+   } 
+ 
+ ES5 function foo() { 
+     var _this = this; 
+     setTimeout(function () { 
+         console.log('id:', _this.id); 
+     }, 100); 
+ }
+```
+
+```js
+var a = 'window'
+var obj1 = {
+    a: 1,
+    fn1: function () {
+            return () => console.log(this.a)
+    }
+}
+var obj2 = {
+    a: 2
+};
+```
+
+```js
+//ES6
+var a = 'window';
+var obj1 = {
+    a: 1,
+    fn1: function () {
+        var _this = this;
+        return function () { return console.log(_this.a); };
+    }
+};
+var obj2 = {
+    a: 2
+};
+
+obj1.fn1()(); // 1
+
+obj1.fn1().call(obj2); // 1 
+
+obj1.fn1.call(obj2)(); // 2
+
+```
+
 
 
 ------
@@ -3354,13 +3414,17 @@ doSomething().then(function(result) {
 
 （3）rejected：已失败
 
+
+
 **Promise三个特点：**
 
-（1）对象的状态不受外界影响，虽执行器函数的执行是**同步**的，但在Promise的状态未从Pending状态变更到其他状态前，then和catch里面的回调函数会放在队列里面等待状态变更以后才执行（**异步**）
+（1）**对象的状态不受外界影响**，虽执行器函数的执行是**同步**的，但在Promise的状态未从Pending状态变更到其他状态前，then和catch里面的回调函数会放在队列里面等待状态变更以后才执行（**异步**）
 
 （2）一旦状态改变，就不会再变，任何时候都可以得到这个结果
 
 （3）只有两种状态改变可能：pending→fulfilled、pending→rejected
+
+
 
 **Promise三个缺点：**
 
@@ -3369,6 +3433,8 @@ doSomething().then(function(result) {
 （2）**若不设置回调函数**，Promise内部抛出的错误，不会反应到外部
 
 （3）当处于pending状态时，**无法得知操作现阶段处于哪一个阶段**
+
+
 
 **promise流程**
 
@@ -3384,16 +3450,16 @@ const promise = new Promise(function(resolve, reject) {});
 
 Promise`构造函数接受一个函数作为参数，该函数的两个参数分别是`resolve`和`reject
 
-- `resolve`函数的作用是，将`Promise`对象的状态从“未完成”变为“成功”
-- `reject`函数的作用是，将`Promise`对象的状态从“未完成”变为“失败”
+- `resolve`函数的作用是，将`Promise`对象的状态**从“未完成”变为“成功”**
+- `reject`函数的作用是，将`Promise`对象的状态**从“未完成”变为“失败”**
 
 **实例方法**
 
 then()
 
-`then`是实例状态发生改变时的回调函数，第一个参数是`resolved`状态的回调函数，第二个参数是`rejected`状态的回调函数
+`then`是实例状态发生改变时的回调函数，**第一个参数**是`resolved`状态的回调函数，**第二个参数**是`rejected`状态的回调函数
 
-`then`方法返回的是一个新的`Promise`实例，也就是`promise`能链式书写的原因
+`then`方法**返回的是一个新的`Promise`实例**，也就是`promise`能链式书写的原因
 
 ```js
 getJSON("/posts.json").then(function(json) {
@@ -3405,7 +3471,7 @@ getJSON("/posts.json").then(function(json) {
 
 catch
 
-`catch()`方法是`.then(null, rejection)`或`.then(undefined, rejection)`的别名，用于指定发生错误时的回调函数
+`catch()`方法是`.then(null, rejection)`或`.then(undefined, rejection)`的别名，**用于指定发生错误时的回调函数**
 
 ```js
 getJSON('/posts.json').then(function(posts) {
@@ -3416,7 +3482,7 @@ getJSON('/posts.json').then(function(posts) {
 });
 ```
 
-`Promise `对象的错误**具有“冒泡”性质**，会一直向后传递，直到被捕获为止
+`Promise `对象的错误**具有“冒泡”性质**，会一直向后传递，**直到被捕获为止**
 
 ```js
 getJSON('/post/1.json').then(function(post) {
@@ -3443,7 +3509,7 @@ const someAsyncThing = function() {
 
 浏览器运行到这一行，会打印出错误提示`ReferenceError: x is not defined`，但是不会退出进程
 
-`catch()`方法之中，还能再抛出错误，通过后面`catch`方法捕获到
+`catch()`方法之中，**还能再抛出错误**，通过后面`catch`方法捕获到
 
 finally()
 
@@ -3455,6 +3521,8 @@ promise
 .catch(error => {···})
 .finally(() => {···});
 ```
+
+
 
 **构造函数方法**
 
@@ -3486,7 +3554,7 @@ const p2 = new Promise((resolve, reject) => {
   throw new Error('报错了');
 })
 .then(result => result)
-.catch(e => e);
+.catch(e => e);  //  自己定义了`catch`方法
 
 Promise.all([p1, p2])
 .then(result => console.log(result))
@@ -3505,13 +3573,15 @@ const p1 = new Promise((resolve, reject) => {
 const p2 = new Promise((resolve, reject) => {
   throw new Error('报错了');
 })
-.then(result => result);
+.then(result => result);  // 没有自己的`catch`方法
 
 Promise.all([p1, p2])
 .then(result => console.log(result))
 .catch(e => console.log(e));
 // Error: 报错了
 ```
+
+
 
 race()
 
@@ -3521,7 +3591,7 @@ race()
 const p = Promise.race([p1, p2, p3]);
 ```
 
-只要`p1`、`p2`、`p3`之中有一个实例率先改变状态，`p`的状态就跟着改变
+**只要`p1`、`p2`、`p3`之中有一个实例率先改变状态，`p`的状态就跟着改变**
 
 率先改变的 Promise 实例的返回值则传递给`p`的回调函数
 
@@ -3537,6 +3607,8 @@ p
 .then(result => console.log(result))
 .catch(e => console.log(e));
 ```
+
+
 
 allSettled()
 
@@ -3555,6 +3627,8 @@ await Promise.allSettled(promises);
 removeLoadingIndicator();
 ```
 
+
+
 resolve()
 
 将现有对象转为 `Promise `对象
@@ -3572,6 +3646,8 @@ new Promise(resolve => resolve('foo'))
 - 参数不是具有`then()`方法的对象，或根本就不是对象，`Promise.resolve()`会返回一个新的 Promise 对象，状态为`resolved`
 - 没有参数时，直接返回一个`resolved`状态的 Promise 对象
 
+
+
 reject()
 
 ```js
@@ -3585,7 +3661,7 @@ p.then(null, function (s) {
 // 出错了
 ```
 
-`Promise.reject()`方法的参数，会原封不动地变成后续方法的参数
+`Promise.reject()`方法的参数，**会原封不动地变成后续方法的参数**
 
 ```js
 Promise.reject('出错了')
@@ -3594,6 +3670,8 @@ Promise.reject('出错了')
 })
 // true
 ```
+
+
 
 **使用场景**
 
@@ -3610,7 +3688,7 @@ const preloadImage = function (path) {
 };
 ```
 
-通过链式操作，将多个渲染数据分别给个`then`，让其各司其职。或当下个异步请求依赖上个请求结果的时候，我们也能够通过链式操作友好解决问题
+通过链式操作，将多个渲染数据分别给`then`，让其各司其职。或当下个异步请求依赖上个请求结果的时候，我们也能够通过链式操作友好解决问题
 
 ```js
 // 各司其职
@@ -3633,6 +3711,8 @@ getInfo().then(res=>{
 })
 ```
 
+
+
 通过`all()`实现多个请求合并在一起，汇总所有请求结果，只需设置一个`loading`即可
 
 ```js
@@ -3649,6 +3729,8 @@ function initLoad(){
 //数据初始化    
 initLoad()
 ```
+
+
 
 通过`race`可以设置图片请求超时
 
@@ -3736,7 +3818,7 @@ Promise.resolve().then(() => {
 
 - 中断Promise
 
-注意这里是中断而不是终止，**因为 Promise 无法终止**，这个中断的意思是：在合适的时候，把 pending 状态的 promise 给 reject 掉。例如一个常见的应用场景就是希望给网络请求设置超时时间，一旦超时就就中断，我们这里用定时器模拟一个网络请求，随机 3 秒之内返回。
+注意这里是中断而不是终止，**因为 Promise 无法终止**，这个中断的意思是：**在合适的时候，把 pending 状态的 promise 给 reject 掉**。例如一个常见的应用场景就是希望给网络请求设置超时时间，**一旦超时就就中断，我们这里用定时器模拟一个网络请求，随机 3 秒之内返回。**
 
 ```js
 function timeoutWrapper(p, timeout = 2000) {
