--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -895,3 +895,91 @@ js数据类型
 
 -----
 
+## 8.15 百度面试
+
+闭包
+
+下面修改方式及原理
+
+```js
+for (var i = 0; i < 10; i++){
+    setTimeout(() => {
+        console.log(i);
+    }, 0);
+}
+```
+
+```js
+for (let i = 0; i < 10; i++){
+    
+    setTimeout(() => {
+        console.log(i);
+    }, 0);
+}
+
+
+//1、在setTimeout外部创建一个自执行函数，并将i当作参数传递进闭包
+for(var i = 0; i < 10; i++){
+    (function(num){
+        setTimeout(function(){
+            console.log(num);   // 输出0，1，2，3，4         
+        }, 0);
+      }
+    )(i);
+}
+
+//2、在setTimeout内部函数创建一个闭包，并将i当作参数传递进去
+for(var i = 0; i < 10 ; i++){
+    setTimeout(function(num){
+        return function(){ //用匿名函数打造一个num变量副本
+            console.log(num);   // 输出0，1，2，3，4 
+        }
+    }(i), 0);
+}
+```
+
+
+
+
+
+
+
+js 事件循环
+
+防抖函数
+
+为什么  _this
+
+```js
+function debounce(fn,wait){
+	var timeout;  //用来存放定时器的返回值，一触发就重新计时
+	return function(){
+		var context=this;
+		//把前一个 setTimeout clear 掉
+		clearTimeout(timeout);
+		//又创建一个新的 setTimeout,保障间隔时间内持续触发，不会执行fn函数
+		timeout=setTimeout(function(){
+			fn.apply(context);
+		},wait);
+	}
+}
+```
+
+行内元素转块级元素
+
+position 的几个属性值
+
+
+
+项目打包
+
+三级联动如何实现
+
+如何优化时间和空间的（预测程序）
+
+算法：  寻找pivoit index 
+
+
+
+-----
+
