--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -16100,6 +16100,54 @@ console.log(result);
 
 
 ---
+## 754. 到达终点数字
+
+在一根无限长的数轴上，你站在0的位置。终点在target的位置。
+
+你可以做一些数量的移动 numMoves :
+
+每次你可以选择向左或向右移动。
+第 i 次移动（从  i == 1 开始，到 i == numMoves ），在选择的方向上走 i 步。
+给定整数 target ，返回 到达目标所需的 最小 移动次数(即最小 numMoves ) 。
+
+**提示:**
+
+- `-109 <= target <= 109`
+- `target != 0`
+
+![到达终点数字](E:\pogject\学习笔记\image\leetcode\到达终点数字.png)
+
+```js
+/**
+ * @param {number} target
+ * @return {number}
+ */
+var reachNumber = function(target) {
+    target = Math.abs(target);
+    let k = 0;
+    while (target > 0) {
+        target -= ++k;
+    }
+    return target % 2 === 0 ? k : k + 1 + k % 2;
+};
+
+console.log(reachNumber(5));
+```
+
+
+
+从起点0到达x点的最少移动次数
+
+在一个点是如为y点，可以移动到（y - 1 或 y + k )点，计算从0到x点的最少移动次数，k为移动的次数，即（k = 1， 2， 3，。。。）
+
+```
+
+```
+
+
+
+-----
+
 ## 761. 特殊的二进制序列
 
 特殊的二进制序列是具有以下两个性质的二进制序列：
@@ -20294,6 +20342,113 @@ console.log(result);
 
 
 
+----
+
+## 1470. 重新排列数组
+
+给你一个数组 nums ，数组中有 2n 个元素，按 [x1,x2,...,xn,y1,y2,...,yn] 的格式排列。
+
+请你将数组按 [x1,y1,x2,y2,...,xn,yn] 格式重新排列，返回重排后的数组。
+
+要求：时间复杂度O(N)，额外空间复杂度O(1)。
+
+**提示：**
+
+- `1 <= n <= 500`
+- `nums.length == 2n`
+- `1 <= nums[i] <= 10^3`
+
+```
+
+```
+
+
+
+### 完美洗牌问题（1）
+
+给定一个长度为偶数的数组arr，长度记为2*N。前n个为左部分，后n个为右部分。arr可以表示为{L1,L2...Ln−1,Ln,R1,R2...Rn−1,Rn},请将数组调整成{ R1,L1,R2,L2,...Rn,Ln}。 
+
+
+
+对于原数组位置i的元素，新位置是**(2\*i)%(2n+1)**，注意，这里用2n表示原数组的长度。后面依然使用该表述方式。有了该表达式，*困难的不是寻找元素在新数组中的位置，而是为该元素“腾位置”*。如果使用暂存的办法，空间复杂度必然要达到O(N)，因此，需要换个思路。
+
+```
+/**
+ * @param {number[]} nums
+ * @param {number} n
+ * @return {number[]}
+ */
+
+// 
+var shuffle = function(nums, n) {
+    // 完美洗牌算法
+    while (n >= 1) {
+        // 计算环的个数
+        let k = 0;
+        let r = 3;
+        // 2 * m  = 3^k - 1
+        // m <= n  ->  2 * m <= 2 * n  -> 3^k - 1 <= 2 * n
+        // 寻找最大的k使得3^k - 1 <= 2*n
+        while (r - 1 <= 2 * n) {
+            r *= 3;
+            k++;
+        }
+        let m = (r / 3 - 1) / 2;
+        // 循环左移n-m位
+        leftRotate(arr, n - m, n);
+         // k个环 环起始位置start: 1,3...3^(k-1)
+         for (let i = 0, start = 1; i < k; i++, start *= 3) {
+            cycleLeader(arr, start, m);
+         }
+         a += 2*m;  // 
+         n -= m;
+    }
+};
+
+const swap = (arr, i, j) => {
+    [arr[i], arr[j]] = [arr[j], arr[i]];
+}
+
+const reverse = (arr, start, end) => {
+    // 翻转 start 开始位置 end 结束位置
+    while (start < end) {
+        swap(arr, start, end);
+        start++;
+        end--;
+    }
+}
+
+// 循环右移m位 n数组长度 下标从1开始
+const leftRotate(arr, m, n) {
+    // 翻转前m位
+    reverse(arr, 1, m);
+    // 翻转剩余元素
+    reverse(arr, m + 1, n);
+    // 整体翻转
+    reverse(arr, 1, n);
+}
+
+// 走圈算法
+const cycleLeader = (arr, start, n) => {
+    let pre = start;
+    // 2 * i % (2 * n + 1)
+    let mod = 2 * n + 1;
+    // 实际位置
+    let next = start * 2 % mod;
+    // 按环移动位置
+    while (next !== start) {
+        swap(arr, pre, next);
+        next = 2 * next % mod;
+    }
+    arr[start] = arr[pre];
+}
+
+
+const arr = [1, 2, 3, 4, 5, 6];
+```
+
+
+
 
 ---
 ## 1576.替换所有的问号
@@ -20682,6 +20837,67 @@ console.log(result);
 
 
 ---
+## 1656. 设计有序流
+
+有 n 个 (id, value) 对，其中 id 是 1 到 n 之间的一个整数，value 是一个字符串。不存在 id 相同的两个 (id, value) 对。
+
+设计一个流，以 任意 顺序获取 n 个 (id, value) 对，并在多次调用时 按 id 递增的顺序 返回一些值。
+
+实现 OrderedStream 类：
+
+OrderedStream(int n) 构造一个能接收 n 个值的流，并将当前指针 ptr 设为 1 。
+String[] insert(int id, String value) 向流中存储新的 (id, value) 对。存储后：
+如果流存储有 id = ptr 的 (id, value) 对，则找出从 id = ptr 开始的 最长 id 连续递增序列 ，并 按顺序 返回与这些 id 关联的值的列表。然后，将 ptr 更新为最后那个  id + 1 。
+否则，返回一个空列表。
+
+ 提示：
+
+1 <= n <= 1000
+1 <= id <= n
+value.length == 5
+value 仅由小写字母组成
+每次调用 insert 都会使用一个唯一的 id
+恰好调用 n 次 insert
+
+
+
+```js
+/**
+ * @param {number} n
+ */
+var OrderedStream = function(n) {
+    this.ptr = 1;
+    this.streamID = new Array(n + 1).fill(false);
+    this.streamData = new Map();
+};
+
+/** 
+ * @param {number} idKey 
+ * @param {string} value
+ * @return {string[]}
+ */
+OrderedStream.prototype.insert = function(idKey, value) {
+    this.streamID[idKey] = true;
+    this.streamData.set(idKey, value);
+    const result = [];
+    while (this.streamID[this.ptr]) {
+        result.push(this.streamData.get(this.ptr));
+        this.ptr++;
+    }
+    return result;
+};
+
+/**
+ * Your OrderedStream object will be instantiated and called as such:
+ * var obj = new OrderedStream(n)
+ * var param_1 = obj.insert(idKey,value)
+ */
+```
+
+
+
+----
+
 ## 1672.最富有客户的资产总量
 
 给你一个 m x n 的整数网格 accounts ，其中 accounts[i][j] 是第 i 位客户在第 j 家银行托管的资产数量。返回最富有客户所拥有的 资产总量 。
@@ -22236,4 +22452,12 @@ console.log(result);
 ```
 
 ---
+
+## 
+
+
+
+```
+
+```
 
