--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -16128,6 +16128,7 @@ var reachNumber = function(target) {
     while (target > 0) {
         target -= ++k;
     }
+    // 偶数 时前面一个反向即可
     return target % 2 === 0 ? k : k + 1 + k % 2;
 };
 
@@ -16140,8 +16141,30 @@ console.log(reachNumber(5));
 
 在一个点是如为y点，可以移动到（y - 1 或 y + k )点，计算从0到x点的最少移动次数，k为移动的次数，即（k = 1， 2， 3，。。。）
 
-```
 
+
+```js
+/**
+ * @param {number} target
+ * @return {number}
+ */
+var reachNumber = function(target) {
+    target = Math.abs(target);
+    let k = 0;
+    let sum = k;
+    while (target > sum) {
+        k++;
+        sum += k;
+    }
+    if (sum - target === 1) {
+        k++;
+    }
+    return k;
+};
+
+for (let i = 0; i <= 10; i++) {
+    console.log(i, reachNumber(i));
+}
 ```
 
 
