--- a/面试学习题目/前端面试_10_前端数据请求.md
+++ b/面试学习题目/前端面试_10_前端数据请求.md
@@ -1,22 +1,39 @@
-#### 5.12 ajax原理，为什么要用ajax？
+## ajax原理，为什么要用ajax？
 
-**参考答案**：
+AJAX 是异步的 JavaScript 和 XML（**A**synchronous **J**avaScript **A**nd **X**ML）。简单点说，就是使用 [`XMLHttpRequest`](https://developer.mozilla.org/en-US/DOM/XMLHttpRequest) 对象与服务器通信。 它可以使用 JSON，XML，HTML 和 text 文本等格式发送和接收数据。AJAX 最吸引人的就是它的“异步”特性，也就是说它可以在不重新刷新页面的情况下与服务器通信，交换数据，或更新页面。
+
+你可以使用 AJAX 最主要的两个特性做下列事：
+
+- 在不重新加载页面的情况下发送请求给服务器。
+- 接受并使用从服务器发来的数据。
+
+
 
 **为什么要用ajax：**
 
-Ajax是一种异步请求数据的web开发技术，对于改善用户的体验和页面性能很有帮助。简单地说，在不需要重新刷新页面的情况下，Ajax 通过异步请求加载后台数据，并在网页上呈现出来。常见运用场景有表单验证是否登入成功、百度搜索下拉框提示和快递单号查询等等。**Ajax的目的是提高用户体验，较少网络数据的传输量。**同时，由于AJAX请求获取的是数据而不是HTML文档，因此它也节省了网络带宽，让互联网用户的网络冲浪体验变得更加顺畅
+Ajax是一种异步请求数据的web开发技术，对于改善用户的体验和页面性能很有帮助。
+
+简单地说，**在不需要重新刷新页面的情况下，Ajax 通过异步请求加载后台数据，并在网页上呈现出来。**
+
+常见运用场景有表单验证是否登入成功、百度搜索下拉框提示和快递单号查询等等。
+
+**Ajax的目的是提高用户体验，较少网络数据的传输量。**同时，由于AJAX请求获取的是数据而不是HTML文档，因此它也节省了网络带宽，让互联网用户的网络冲浪体验变得更加顺畅
+
+
 
 **ajax原理：**
 
-Ajax的工作原理相当于在用户和服务器之间加了—个**中间层**(AJAX引擎),使用户操作与服务器响应异步化。并不是所有的用户请求都提交给服务器,像—些数据验证和数据处理等都交给Ajax引擎自己来做, 只有确定需要从服务器读取新数据时再由Ajax引擎代为向服务器提交请求。Ajax其核心有JavaScript、XMLHTTPRequest、DOM对象组成，通过XmlHttpRequest对象来向服务器发异步请求，从服务器获得数据，然后用JavaScript来操作DOM而更新页面
+Ajax的工作原理相当于在用户和服务器之间加了—个**中间层**(AJAX引擎),使用户操作与服务器响应异步化。
+
+并不是所有的用户请求都提交给服务器,像—些数据验证和数据处理等都交给Ajax引擎自己来做, **只有确定需要从服务器读取新数据时再由Ajax引擎代为向服务器提交请求**。
+
+Ajax其核心有JavaScript、XMLHTTPRequest、DOM对象组成，通过XmlHttpRequest对象来向服务器发异步请求，从服务器获得数据，然后用JavaScript来操作DOM而更新页面
 
 
 
 ---
 
-#### 5.46 创建ajax过程
-
-**参考答案**：
+## 创建ajax过程
 
 1. 创建XMLHttpRequest对象,也就是创建一个异步调用对象.
 2. 创建一个新的HTTP请求,并指定该HTTP请求的方法、URL及验证信息.
@@ -25,11 +42,47 @@ Ajax的工作原理相当于在用户和服务器之间加了—个**中间层**
 5. 获取异步调用返回的数据.
 6. 使用JavaScript和DOM实现局部刷新.
 
+```html
+<button id="ajaxButton" type="button">Make a request</button>
+
+<script>
+(function() {
+  var httpRequest;
+  document.getElementById("ajaxButton").addEventListener('click', makeRequest);
+
+  function makeRequest() {
+    httpRequest = new XMLHttpRequest();
+
+    if (!httpRequest) {
+      alert('Giving up :( Cannot create an XMLHTTP instance');
+      return false;
+    }
+    httpRequest.onreadystatechange = alertContents;
+    httpRequest.open('GET', 'test.html');
+    httpRequest.send();
+  }
+
+  function alertContents() {
+    if (httpRequest.readyState === XMLHttpRequest.DONE) {
+      if (httpRequest.status === 200) {
+        alert(httpRequest.responseText);
+      } else {
+        alert('There was a problem with the request.');
+      }
+    }
+  }
+})();
+</script>
+
+```
+
+
+
 
 
 ---
 
-#### 5.28 实现ajax的封装
+## 实现ajax的封装
 
 ```js
 /*
@@ -118,9 +171,7 @@ module.exports = {
 
 ----
 
-#### 5.21 手写jsonp
-
-**参考答案**：
+## 手写jsonp
 
 实现步骤：
 
@@ -177,9 +228,7 @@ page=1&cate=recommend&callback=jsoncallback
 
 ---
 
-#### 5.39 xhr 的 readyState
-
-**参考答案**：
+## 说说xhr 的 readyState
 
 readyState是XMLHttpRequest对象的一个属性，**用来标识当前XMLHttpRequest对象处于什么状态**。
 readyState总共有5个状态值，分别为0~4，每个值代表了不同的含义
@@ -194,15 +243,45 @@ readyState总共有5个状态值，分别为0~4，每个值代表了不同的含
 
 4：完成，XMLHttpRequest对象读取服务器响应结束
 
+**XMLHttpRequest.readyState** 属性返回一个 XMLHttpRequest 代理当前所处的状态。一个 XHR 代理总是处于下列状态中的一个：
+
+| 值   | 状态               | 描述                                                |
+| :--- | :----------------- | :-------------------------------------------------- |
+| `0`  | `UNSENT`           | 代理被创建，但尚未调用 open() 方法。                |
+| `1`  | `OPENED`           | `open()` 方法已经被调用。                           |
+| `2`  | `HEADERS_RECEIVED` | `send()` 方法已经被调用，并且头部和状态已经可获得。 |
+| `3`  | `LOADING`          | 下载中；`responseText` 属性已经包含部分数据。       |
+| `4`  | `DONE`             | 下载操作已完成。                                    |
+
+```js
+var xhr = new XMLHttpRequest();
+console.log('UNSENT', xhr.readyState); // readyState 为 0
+
+xhr.open('GET', '/api', true);
+console.log('OPENED', xhr.readyState); // readyState 为 1
+
+xhr.onprogress = function () {
+    console.log('LOADING', xhr.readyState); // readyState 为 3
+};
+
+xhr.onload = function () {
+    console.log('DONE', xhr.readyState); // readyState 为 4
+};
+
+xhr.send(null);
+
+```
+
+
+
 ---
 
-#### 5.40 axios的拦截器原理及应用
-
-**参考答案**：
+## axios的拦截器原理及应用
 
 **应用场景**
 
 **请求拦截器**用于在接口请求之前做的处理，比如为每个请求带上相应的参数（token，时间戳等）。
+
 **返回拦截器**用于在接口返回之后做的处理，比如对返回的状态进行判断（token是否过期）。
 
 **拦截器的使用**
@@ -218,6 +297,7 @@ let instance = axios.create({
         'content-type': 'application/x-www-form-urlencoded'
     }
 })
+
 //请求拦截器
 instance.interceptors.request.use(config => { //拦截请求，做统一处理
     const token = "asdasdk"
@@ -227,6 +307,7 @@ instance.interceptors.request.use(config => { //拦截请求，做统一处理
 }, err => {//失败
     return Promise.reject(err)
 })
+
 //响应拦截器
 instance.interceptors.response.use(response => { //拦截响应，做统一处理
     if (response.data.code) {
@@ -314,9 +395,7 @@ util.forEach(["get","post","delete"],(methods)=>{
 
 ----
 
-#### 5.48 fetch 请求方式
-
-**参考答案**：
+## fetch 请求方式
 
 **fetch**
 
@@ -458,7 +537,7 @@ fetch(getReq).then(function(response) {
 
 ---
 
-## 3.3 请问你了解ajax请求吗？
+## 请问你了解ajax请求吗？
 
 传统请求方法的缺点:
 
@@ -478,9 +557,11 @@ d、注册事件
 
 e、更新界面
 
+
+
 ---
 
-## 3.4 请问ajax是如何发请求的？
+## 请问ajax是如何发请求的？
 
 get请求：
 
@@ -624,11 +705,11 @@ getJSON("http://rap.taobao.org/mockjs/9768/Rap/get").then(function(response) {
 
 ----
 
-## 3.5 请问ajax、axios、fetch请求有何区别？
+## 请问ajax、axios、fetch请求有何区别？
 
-- **axios**
+**axios**
 
-**一个基于Promise 用于浏览器和 nodejs 的 HTTP 客户端**，本质上也是对原生XMLHTTPRequest对象的封装，只不过它是Promise的实现版本，符合最新的ES规范，具有以下特征：
+**一个基于Promise 用于浏览器和 nodejs 的 HTTP 客户端**，本质上也是**对原生XMLHTTPRequest对象的封装，只不过它是Promise的实现版本，符合最新的ES规范**，具有以下特征：
 
 a、从浏览器中创建 XMLHttpRequest
 
@@ -648,9 +729,11 @@ h、支持取消请求
 
 i、自动转换JSON数据
 
-- **fetch**
 
-号称是ajax替代品，在ES6时产生，是基于promise设计的。相比ajax，**fetch代码结构更加简单，参数类型与ajax类似**，但fetch不是ajax的进一步封装，而是原生js，没有使用XMLHttpRequest对象
+
+**fetch**
+
+号称是ajax替代品，在ES6时产生，是基于promise设计的。相比ajax，**fetch代码结构更加简单，参数类型与ajax类似**，但fetch不是ajax的进一步封装，**而是原生js，没有使用XMLHttpRequest对象**
 
 **fetch优点：**
 
