--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -983,3 +983,148 @@ position 的几个属性值
 
 -----
 
+## 8.16 极米笔试
+
+旋转数组
+
+```
+L1L2...LnR1R2...Rn  =>  R1L1R2L2...RnLn
+```
+
+
+
+从起点0到目标值x的最少移动次数
+
+```
+在一个y点可以移动到（y - 1 或 y + k) ,其中k为当前移动次数
+```
+
+
+
+----
+
+## 8.18 荣耀笔试
+
+按规则 加密明文
+
+```
+[a,b,c] => 2, ... [p,q,r,s] => 7, [t,u,v] => 8, [w, x, y, z] => 9
+[A-Z] => [a-z] 向前移动一个，a => z
+其他字符不变
+```
+
+给定一个矩阵，判断输入数组中的元素是否能连在一起
+
+```
+[1, 2, 3, 4, 5, 11]
+```
+
+
+
+计算C语言结构体的size
+
+
+
+----
+
+## 8.19 大应科技面试
+
+
+
+Node.js与ES6中模块的区别
+
+箭头函数和普通函数的区别
+
+this指向问题
+
+for in 与 for of 的区别
+
+
+
+BFC
+
+水平垂直居中如何实现
+
+float的使用，注意哪些问题
+
+
+
+前端安全问题, 如何避免
+
+cookie的字段
+
+登录如何实现，有哪些方式
+
+
+
+TCP三次握手四次挥手
+
+http版本的区别，https 
+
+```js
+new Promise((resolve, reject) => {
+    console.log(1);
+    setTimeout(() => {
+        console.log(2);
+    });
+    resolve();
+}).then(() => {
+    console.log(3);
+}).then(() => {
+    return new Promise((resolve, reject) => {
+        console.log(4);
+    }).then(() => {
+        console.log(5);
+    });
+}).then(() => {
+    console.log(6);
+});
+
+console.log(7);
+
+/*
+1
+7
+3
+4
+2
+*/
+
+```
+
+
+
+```js
+Array.a = 1;
+Array.prototype.a = 2;
+Function.prototype.a = 3;
+Object.prototype.a = 4;
+
+var arr = [];
+
+console.log(arr.__proto__)  // Object(0) [ a: 2 ]
+console.log(arr.a);  // 2
+
+console.log(arr.length.__proto__);  // {}
+console.log(arr.length.a);  // 4
+
+console.log(arr.forEach.__proto__);  // { a: 3 }
+console.log(arr.forEach.a);  // 3
+
+
+console.log(Function.__proto__);  // { a: 3 }
+console.log(Function.a);  // 3
+
+
+console.log(Object.__proto__);  // { a: 3 }
+console.log(Object.a);  // 3
+```
+
+
+
+
+
+----
+
+
+
