--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -991,7 +991,9 @@ position 的几个属性值
 L1L2...LnR1R2...Rn  =>  R1L1R2L2...RnLn
 ```
 
+```
 
+```
 
 从起点0到目标值x的最少移动次数
 
@@ -1126,5 +1128,122 @@ console.log(Object.a);  // 3
 
 ----
 
+## 8.19 4399笔试
 
+
+
+promis题
+
+```js
+setTimeout(() => {
+    console.log(1);
+})
+
+new Promise((resolve, reject) => {
+    console.log(2);
+    setTimeout(() => {
+        console.log(3);
+        resolve(4);
+    });
+}).then((value) => {
+    console.log(value);
+});
+
+console.log(6);
+
+/*
+2
+6
+1
+3
+4
+*/
+```
+
+
+
+异步题
+
+```
+function start() {
+    console.log(new Date());
+    console.log("红包雨开始");
+}
+
+function redPacketRain1() {
+    console.log(new Date());
+    console.log("第一个大红包");
+}
+
+function redPacketRain2() {
+    console.log(new Date());
+    console.log("第二个大红包");
+}
+
+function redPacketRain3() {
+    console.log(new Date());
+    console.log("第三个大红包");
+}
+
+function end() {
+    console.log(new Date());
+    console.log("红包雨结束");
+}
+
+function game(timer, fn) {
+    setTimeout(() => {
+        fn.apply();
+    }, timer);
+    Promise.resolve(timer);
+    
+}
+
+new Promise((resolve, reject) => {
+    return game(1, start);
+}).then(() => {
+    return game(2, redPacketRain1);
+}).then(() => {
+    return game(3, redPacketRain2);
+}).then(() => {
+    return game(4, redPacketRain3);
+}).then(() => {
+    end();
+});
+```
+
+
+
+格式化数字为千分位 12345=》 12,345
+
+给定时间戳计算与当前时间的时间差
+
+给定一个字符串查找第一个不重复的字符
+
+
+
+----
+
+## 8.20 科大讯飞笔试
+
+
+
+计算 1/2 + 2/3 + 3/5 + ....的前n个和，保留两位小数
+
+```
+
+```
+
+
+
+判断输入字符串的格式
+
+
+
+找到迷宫礼物的最短路径
+
+
+
+
+
+----
 
