--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3426,6 +3426,57 @@ console.log(result);
 
 
 
+----
+
+## 92. 反转链表 II
+
+给你单链表的头指针 head 和两个整数 left 和 right ，其中 left <= right 。请你反转从位置 left 到位置 right 的链表节点，返回 反转后的链表 。
+
+来源：力扣（LeetCode）
+链接：https://leetcode.cn/problems/reverse-linked-list-ii
+著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} left
+ * @param {number} right
+ * @return {ListNode}
+ */
+function reverseBetween(head, left, right) {
+    // 因为头节点有可能发生变化，使用虚拟头节点可以避免复杂的分类讨论
+    const dummyNode = new ListNode(-1);
+    dummyNode.next = head;
+
+    let pre = dummyNode;
+    
+    for (let i = 0; i < left - 1; i++) {
+        pre = pre.next;
+    }
+
+    let cur = pre.next;
+    for (let i = 0; i < right - left; i++) {
+        const next = cur.next;
+        cur.next = next.next;
+        next.next = pre.next;
+        pre.next = next;
+    }
+
+    return dummyNode.next;
+}
+
+
+```
+
+
+
 
 ---
 ## 94.二叉树的中序遍历
